# Engram-cloud

./: .gitignore  BUILD_TASK.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
docs/: ingestion-channels-prompt.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  auth.rs  db.rs  deeplink.rs  folder_scan.rs  keychain.rs  lib.rs  main.rs  oauth.rs  spotlight.rs  url_fetch.rs
src/components/: AppLoader.tsx  ConfirmDialog.tsx  ConnectionsList.tsx  EmptyState.tsx  EngramCard.tsx  EngramModal.tsx  ErrorBoundary.tsx  Layout.tsx  LinkEngramModal.tsx  QuickCaptureModal.tsx  SearchBar.tsx  SearchSkeleton.tsx  Sidebar.tsx  Titlebar.tsx  Toast.tsx
src/components/import/: FolderPickerCard.tsx  ImportDropZone.tsx  ImportPreview.tsx  ImportProgress.tsx  ProcessingDashboard.tsx  ReviewCard.tsx  SocialSyncProgress.tsx  UrlPasteInput.tsx
src/engine/ai/: AIProvider.ts  AnthropicProvider.ts  CostGovernor.ts  GeminiProvider.ts  OpenAIProvider.ts  providerFactory.ts
src/engine/dedup/: SemanticDeduper.ts
src/engine/extraction/: ExtractionPipeline.ts
src/engine/import/: ChunkManager.ts  ImportQueue.ts  ImportRouter.ts  types.ts
src/engine/prompts/: qa.ts  (+9 more)
src/lib/: db.test.ts  db.ts  deeplink.ts  initDatabase.ts  keychain.ts  migrations.ts  queryLogger.ts  quickCapture.ts  recovery.ts  schema.test.ts  spotlight.ts  useDebounce.ts  useFocusTrap.ts  uuid.test.ts  uuid.ts  wordlist.ts
src/migrations/: 001_initial.sql  002_uuid_and_constraints.sql  003_settings.sql  004_extraction_memory.sql
src/pages/: Cloud.tsx  Experience.tsx  Graph.tsx  Home.tsx  Settings.tsx  Timeline.tsx
src/repositories/: EngramItemRepository.test.ts  EngramItemRepository.ts  ExperienceLinksRepository.ts  LifePhaseRepository.ts  PersonRepository.ts  SettingsRepository.ts  TransformationRepository.test.ts  TransformationRepository.ts  index.ts
src/store/: index.ts
src/stores/: authStore.ts  engramService.ts  engramStore.test.ts  engramStore.ts  exportService.ts  importService.ts  importStore.ts  schedulerStore.ts  storeLoader.ts  transformationService.ts
src/test/: mockDb.ts
src/types/: engram.ts  transformationTypes.ts
src/views/: ImportView.tsx  LockScreen.tsx  OnboardingPassphrase.tsx  ReviewView.tsx
tests/: db.test.ts
tests/helpers/: dbFactory.ts  index.ts
(+53 files in other folders)
